manifests/istio-auth/ml-pipeline-api-auth.yaml
# Copyright 2021 IBM Corporation
#
# SPDX-License-Identifier: Apache-2.0
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ml-pipeline
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: ml-pipeline
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/kubeflow/sa/ml-pipeline
        - cluster.local/ns/kubeflow/sa/ml-pipeline-ui
        - cluster.local/ns/kubeflow/sa/ml-pipeline-persistenceagent
        - cluster.local/ns/kubeflow/sa/ml-pipeline-scheduledworkflow
        - cluster.local/ns/kubeflow/sa/ml-pipeline-viewer-crd-service-account
        - cluster.local/ns/kubeflow/sa/kubeflow-pipelines-cache
        - cluster.local/ns/kubeflow/sa/mlx-api
        - cluster.local/ns/kubeflow/sa/mlx-ui
  # For user workloads, which cannot user http headers for authentication
  - when:
    - key: request.headers[kubeflow-userid]
      notValues: ['*']
