manifests/istio-auth/mlx-api-auth.yaml
# Copyright 2021 IBM Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.apiVersion: rbac.istio.io/v1alpha1
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mlx-api
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      service: mlx-api
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
  - from:
    - source:
        principals:
        - cluster.local/ns/kubeflow/sa/ml-pipeline
        - cluster.local/ns/kubeflow/sa/ml-pipeline-ui
        - cluster.local/ns/kubeflow/sa/ml-pipeline-persistenceagent
        - cluster.local/ns/kubeflow/sa/ml-pipeline-scheduledworkflow
        - cluster.local/ns/kubeflow/sa/ml-pipeline-viewer-crd-service-account
        - cluster.local/ns/kubeflow/sa/kubeflow-pipelines-cache
        - cluster.local/ns/kubeflow/sa/metadata-grpc-server
        - cluster.local/ns/kubeflow/sa/mlx-ui
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mlx-api
  namespace: kubeflow
spec:
  host: mlx-api.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
