manifests/istio-auth/mlx-ext-authz.yaml
# Copyright 2021 IBM Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.apiVersion: rbac.istio.io/v1alpha1
#
# Need to remove the "authn-filter" envoyfilter and replace it with
# this mlx-ext-authz
#
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mlx-ext-authz
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: CUSTOM
  provider:
    name: "mlx-authz-http"
  rules:
  - to:
    - operation:
        notPaths: ["/os*"]
