manifests/istio-auth/mlx-ui-auth.yaml
# Copyright 2021 IBM Corporation
#
# SPDX-License-Identifier: Apache-2.0
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mlx-ui
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      service: mlx-ui
  rules:
  - from:
    - source:
        namespaces:
        - istio-system
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mlx-ui
  namespace: kubeflow
spec:
  host: mlx-ui.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
